--- a/MagicalExoPlayer/app/src/main/AndroidManifest.xml
+++ b/MagicalExoPlayer/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".DetailsVideoActivity">
+        </activity>
         <activity android:name=".PlayerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
